gateway/1.13/modules/ROOT/pages/flex-agent-policies.adoc
= Omni Gateway Agent Policies
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images


Policies enforce rules when Omni Gateway processes requests, enabling you to secure and govern your server instances. Omni Gateway includes A2A and MCP specific policies that provide enhanced security and control over agent interactions. 

To apply a policy, see xref:flex-gateway-secure-conn.adoc[].

Omni Gateway MCP and A2A server instances also support other Omni Gateway policies to protect server instances through rate limiting, authentication, authorization, threat protection, monitoring, and logging. For more information about MuleSoft-provided policies, see the xref:policies-included-directory.adoc[] and xref:policies-outbound-directory.adoc[].

To extend existing functionality or define new functionality, create custom policies based on your specific business requirements. For information about creating custom policies, see xref:pdk::policies-pdk-overview.adoc[].

NOTE: All agent policies are inbound policies and are not supported as automated policies.

== SSE Policies 

Both A2A and MCP support the following policies for Server-Sent Events (SSE) streaming:

[%header%autowidth.spread]
|===
|Policy |Summary
| xref:policies-included-sse-logging.adoc[SSE Logging] | Logs every SSE event while streaming 
|===

== A2A Policies

[%header%autowidth.spread]
|===
|Policy |Summary
| xref:policies-included-a2a-agent-card.adoc[A2A Agent Card] | Rewrites the Agent Card URL to match the server instance public URL
| xref:policies-included-a2a-pii-detector.adoc[A2A PII Detector] | Detects personally identifiable information (PII) in requests sent to the agent
| xref:policies-included-a2a-prompt-decorator.adoc[A2A Prompt Decorator] | Decorates prompts with context information
| xref:policies-included-a2a-schema-validation.adoc[A2A Schema Validation] | Validates agent requests to ensure they conform to the A2A specification
|===

== A2A v1 Policies

[%header%autowidth.spread]
|===
|Policy |Summary
| xref:policies-included-a2a-v1-agent-card.adoc[A2A v1 Agent Card] | Rewrites interface URLs in the A2A v1.0 agent card to match the gateway's public address
| xref:policies-included-a2a-v1-pii-detector.adoc[A2A v1 PII Detector] | Detects personally identifiable information (PII) in A2A v1 requests across all transports
| xref:policies-included-a2a-v1-prompt-decorator.adoc[A2A v1 Prompt Decorator] | Decorates A2A v1 prompts with additional context information
| xref:policies-included-a2a-v1-schema-validation.adoc[A2A v1 Schema Validation] | Verifies that requests to the agent are compliant with the A2A v1.0 specification
| xref:policies-included-a2a-v1-to-v03-transcoder.adoc[A2A v1 to v0.3 Transcoder] | Transcodes protocol messages bidirectionally between A2A v1.0 JSON-RPC clients and A2A v0.3 backend servers
| xref:policies-included-a2a-v1-token-rate-limit.adoc[A2A v1 Token Based Rate Limit] | Rate limits v1 A2A agent usage of upstream resources
|===


== MCP Policies

[%header%autowidth.spread]
|===
|Policy |Summary
| xref:policies-included-mcp-attribute-access-control.adoc[MCP Attribute-Based Access Control] | Controls access to tools, resources, and prompts based on user information such as Tiers, IP, Headers, or Claims
| xref:policies-included-mcp-global-access.adoc[MCP Global Access] | Restricts which MCP tools are exposed by defining Allow and Block rules
| xref:policies-included-mcp-pii-detector.adoc[MCP PII Detector] | Blocks elicitation responses containing personally identifiable information (PII) from reaching MCP servers
| xref:policies-included-mcp-payload-optimization.adoc[MCP Payload Optimization] | Reduces tool response token consumption using one or more configurable methods: remove structural noise, trim oversized responses to match agent intent, or compress repeated structures into TOON
| xref:policies-included-mcp-progressive-disclosure.adoc[MCP Tools Progressive Disclosure] | Reduces context window token cost by exposing tools on-demand through search
| xref:policies-included-mcp-schema-validation.adoc[MCP Schema Validation] | Validates MCP requests to ensure they conform to the MCP specification
| xref:policies-included-mcp-support.adoc[MCP Support] | Adds MCP support to an Omni Gateway MCP server instance. This policy is required for your MCP server instance to function properly.
| xref:policies-included-mcp-tool-mapping.adoc[MCP Tool Mapping] | Redefines tool names and descriptions to reduce prompt complexity and improve LLM comprehension
|===

== LLM Policies

[%header%autowidth.spread]
|===
|Policy |Summary
| xref:policies-included-azure-content-safety.adoc[Azure Content Safety] | Evaluates LLM prompts and responses against Azure AI Content Safety for harmful content, jailbreak attempts, hallucinations, and copyrighted material
| xref:policies-included-bedrock-guardrails.adoc[Amazon Bedrock Guardrails] | Evaluates LLM prompts and responses against Amazon Bedrock guardrails for content safety, PII detection, and contextual grounding
| xref:policies-included-llm-pii-detection.adoc[LLM PII Detection] | Detects personally identifiable information (PII) in OpenAI-format LLM Proxy requests and responses
| xref:policies-included-llm-token-rate-limit.adoc[LLM Token Based Rate Limit] | Limits LLM Proxy usage based on the number of tokens consumed
| xref:policies-included-regex-prompt-guard.adoc[Regex Prompt Guard] | Blocks LLM requests that match deny-list regex patterns
|===


== See Also

* xref:policies-reorder.adoc[]
* xref:policies-flex-dataweave-support.adoc[]